landing page should be perfect. literally no issues. Looks good on mobile, tablet, desktop

--- a/app/static/css/landing.css
+++ b/app/static/css/landing.css
@@ -678,12 +678,22 @@ button {
     }
 
     .site-title {
-        margin-left: 1rem;
-        width: 75%;
+        margin-left: 0rem;
+        flex: 1;
+        font-size: 1rem;
+        justify-content: flex-start;
     }
 
+    .right-nav-container {
+        width: 60%;
+    }
+
+    .nav-right {
+        margin: 0;
+        padding: 0;
+    }
     .search-bar-results {
-        top: 5%;
+        top: 9%;
         width: 100%;
         left: 0;    
     
@@ -733,6 +743,10 @@ button {
     .search-bar-overlay {
         justify-content: center;
         margin: auto;
+    }
+
+    .search-result-down p {
+        font-size: .75rem;
     }
 
 }
